# Geekppt

./: .gitignore  LICENSE  README.md  codeParser.py  geekpptMain.py  input.md
CodeEvaluation/: CMakeLists.txt  CodeEvaluation.cpp  CodeEvaluation.h  Project4.sln  Project4.vcxproj  Project4.vcxproj.filters  Project5.sln  Project5.vcxproj  Project5.vcxproj.filters  README.md  Test.cpp  cfileff.txt  makefile  sampleCode1.cpp  sampleCode2.cpp  sampleText1.cpp  sampleText1.txt  sampleText2.txt
Execute function/: exec.cpp
Extract Code (pptx)/: ExtractContent.py  PresentationBuilder.py
Extract Code (pptx)/examples/: add_picture.py  add_shape.py  add_table.py  add_textbox.py  bullet_slide.py  extract_contents.py  hello_world.py
Extract Code (pptx)/resources/: test.md
VSTO add-in/: Auxiliary.CodeEvaluation.cs  Auxiliary.Naming.cs  Auxiliary.RGBColor.cs  Code.Designer.cs  Code.cs  README.md  ThisAddIn.Designer.cs  ThisAddIn.Designer.xml  ThisAddIn.cs
VSTO add-in/icons/: cpp.jfif
VSTO add-in/test_case/: AddinTest.pptx
see me/: 新建 文本文档.txt
